--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "threejs",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
+  },
   "dependencies": {
     "three": "^0.169.0"
   },
